--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -17,14 +17,11 @@
         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Components</a>
         <ul class="collapse list-unstyled" id="homeSubmenu">
           <li>
-            <a href="#" routerLink="/buttons" routerLinkActive="active">Button</a>
+            <a href="#" routerLink="/components/buttons" routerLinkActive="active">Button</a>
           </li>
           <li>
-            <a href="#" routerLink="/dashboard2" routerLinkActive="active">Dashboard2</a>
-          </li>
-          <li>
-            <a href="#">Home 3</a>
-          </li>
+              <a href="#" routerLink="/components/cards" routerLinkActive="active">Card</a>
+            </li>
         </ul>
       </li>
       <li>
@@ -63,8 +60,7 @@
   </nav>
 
   <!-- Page Content  -->
-  <div id="content">
-
+  <div id="content" style="width:100%">
     <nav class="navbar navbar-expand-lg navbar-dark bg-light shadow colorNav">
       <div class="container-fluid">
         <i class="fa fa-bars" aria-hidden="true" id="sidebarCollapse" style="color:aliceblue"></i>
