--- a/src/app/components/buttons/button-add/button-add.component.html
+++ b/src/app/components/buttons/button-add/button-add.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary btn-sm"><i class="fa fa-plus" aria-hidden="true"></i> Add</button>
+<button class="btn btn-info btn-sm"><i class="fa fa-plus" aria-hidden="true"></i> Add</button>
