--- a/src/app/components/buttons/button-back/button-back.component.html
+++ b/src/app/components/buttons/button-back/button-back.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-secondary btn-sm"><i class="fa fa-reply" aria-hidden="true"></i> Back</button>
+<button class="btn btn-info btn-sm"><i class="fa fa-reply" aria-hidden="true"></i> Back</button>
