--- a/src/app/components/buttons/button-next/button-next.component.html
+++ b/src/app/components/buttons/button-next/button-next.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary btn-sm"><i class="fa fa-share" aria-hidden="true"></i> Next</button>
+<button class="btn btn-info btn-sm"><i class="fa fa-share" aria-hidden="true"></i> Next</button>
