--- a/src/app/components/buttons/button-print/button-print.component.html
+++ b/src/app/components/buttons/button-print/button-print.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary btn-sm"><i class="fa fa-print" aria-hidden="true"></i> Print</button>
+<button class="btn btn-info btn-sm"><i class="fa fa-print" aria-hidden="true"></i> Print</button>
