--- a/src/app/components/buttons/button-select/button-select.component.html
+++ b/src/app/components/buttons/button-select/button-select.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary btn-sm"><i class="fa fa-check-circle-o" aria-hidden="true"></i> Select</button>
+<button class="btn btn-info btn-sm"><i class="fa fa-check-circle-o" aria-hidden="true"></i> Select</button>
