--- a/src/app/page/baiwa/button/button.component.html
+++ b/src/app/page/baiwa/button/button.component.html
@@ -1,3 +1,20 @@
-<p>
-  button works!
-</p>
+<app-card-header header="Buttons">
+  <div class="row">
+    <div class="col-sm-6">
+      <button-add></button-add>      
+      <button-cancel></button-cancel>
+      <button-delete></button-delete>
+      <button-edit></button-edit>
+      <button-back></button-back>
+      <button-next></button-next>
+      <button-print></button-print>
+      <button-save></button-save>
+      <button-select></button-select>
+    </div>
+    <div class="col-sm-6">
+      <pre>
+        {{btn}}
+      </pre>
+    </div>
+  </div>
+</app-card-header>
