--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -66,7 +66,7 @@
   </nav>
 
   <!-- Page Content  -->
-  <div id="content" style="width:100%">
+  <div id="content" style="width:100%; background-color: #fbfbfb;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-light shadow colorNav">
       <div class="container-fluid">
         <i class="fa fa-bars" aria-hidden="true" id="sidebarCollapse" style="color:aliceblue"></i>
