--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -7,18 +7,26 @@
 
 <div class="form-group row">
   <div class="col-sm-6">
-    <canvas class="shadow" id="line-chart"></canvas>
+    <app-card-body>
+      <canvas id="line-chart"></canvas>
+    </app-card-body>
   </div>
   <div class="col-sm-6">
-    <canvas class="shadow" id="radar-chart"></canvas>
+    <app-card-body>
+      <canvas id="radar-chart"></canvas>
+    </app-card-body>
   </div>
 </div>
 <div class="form-group row">
   <div class="col-sm-6">
-    <canvas class="shadow" id="barChart"></canvas>
+    <app-card-body>
+      <canvas id="barChart"></canvas>
+    </app-card-body>
   </div>
   <div class="col-sm-6">
-    <canvas class="shadow" id="polarAear"></canvas>
+    <app-card-body>
+      <canvas id="polarAear"></canvas>
+    </app-card-body>
   </div>
 </div>
 
@@ -68,4 +76,3 @@
     </div>
   </div>
 </div>
-
