--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -72,11 +72,11 @@
   <div id="content" style="width:100%; background-color: #fbfbfb;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-light shadow colorNav">
       <div class="container-fluid">
-        <i class="fa fa-bars" aria-hidden="true" id="sidebarCollapse" style="color:aliceblue"></i>
-        <button class="btn btn-info d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <i class="fa fa-bars" aria-hidden="true" id="sidebarCollapse" style="color:aliceblue; cursor: pointer;"></i>
+        <span class="d-inline-block d-lg-none ml-auto"  data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa fa-bars" ></i>
-        </button>
+          <i class="fa fa-bars" style="color:#fbfbfb"></i>
+        </span>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="nav navbar-nav ml-auto">
