--- a/src/app/common/layout/layout.component.css
+++ b/src/app/common/layout/layout.component.css
@@ -26,8 +26,9 @@
   max-width: 250px;
   min-height: 100vh;
 }
-a[data-toggle="collapse"] {
+a[data-toggle="collapse"], .table {
   position: relative;
+  width: 100%;
 }
 
 .dropdown-toggle::after {
