--- a/src/app/page/baiwa/button/button.component.html
+++ b/src/app/page/baiwa/button/button.component.html
@@ -1,20 +1,28 @@
-<app-card-header header="Buttons">
-  <div class="row">
-    <div class="col-sm-6">
-      <button-add></button-add>      
-      <button-cancel></button-cancel>
-      <button-delete></button-delete>
-      <button-edit></button-edit>
-      <button-back></button-back>
-      <button-next></button-next>
-      <button-print></button-print>
-      <button-save></button-save>
-      <button-select></button-select>     
-    </div>
-    <div class="col-sm-6">
-      <pre>
+<div class="form-group">
+  <app-card-header header="Buttons">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <button-add></button-add>
+          <button-cancel></button-cancel>
+          <button-delete></button-delete>
+          <button-edit></button-edit>
+          <button-back></button-back>
+        </div>
+        <div class="form-group">
+          <button-next></button-next>
+          <button-print></button-print>
+          <button-save></button-save>
+          <button-select></button-select>
+        </div>
+
+
+      </div>
+      <div class="col-sm-6">
+        <pre>
         {{btn}}
       </pre>
+      </div>
     </div>
-  </div>
-</app-card-header>
+  </app-card-header>
+</div>
