--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -19,51 +19,34 @@
       </li>
       <li>
         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-          <i class="fa fa-gg-circle"></i> Components
+          <i class="fa fa-folder"></i> Components
         </a>
         <ul class="collapse list-unstyled" id="homeSubmenu">
           <li>
-            <a href="#" routerLink="/components/buttons" routerLinkActive="active"><i class="fa fa-minus"></i> Button</a>
+            <a href="#" routerLink="/components/buttons" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+              Button</a>
           </li>
           <li>
-            <a href="#" routerLink="/components/cards" routerLinkActive="active"><i class="fa fa-minus"></i> Card</a>
+            <a href="#" routerLink="/components/cards" routerLinkActive="active"><i class="fa fa-circle-thin"></i> Card</a>
           </li>
           <li>
-              <a href="#" routerLink="/components/blockui" routerLinkActive="active"><i class="fa fa-minus"></i> Block Ui</a>
-            </li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">About</a>
-      </li>
-      <li>
-        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-        <ul class="collapse list-unstyled" id="pageSubmenu">
-          <li>
-            <a href="#">Page 1</a>
+            <a href="#" routerLink="/components/blockui" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+              Block Ui</a>
           </li>
           <li>
-            <a href="#">Page 2</a>
-          </li>
-          <li>
-            <a href="#">Page 3</a>
+            <a href="#" routerLink="/components/datatable" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+              Datatable</a>
           </li>
         </ul>
-      </li>
-      <li>
-        <a href="#">Portfolio</a>
-      </li>
-      <li>
-        <a href="#">Contact</a>
       </li>
     </ul>
 
     <ul class="list-unstyled CTAs">
       <li>
-        <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>
+        <a href="#" class="download">Download source</a>
       </li>
       <li>
-        <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>
+        <a href="#" class="article">Back to article</a>
       </li>
     </ul>
   </nav>
@@ -73,7 +56,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-light shadow colorNav">
       <div class="container-fluid">
         <i class="fa fa-bars" aria-hidden="true" id="sidebarCollapse" style="color:aliceblue; cursor: pointer;"></i>
-        <span class="d-inline-block d-lg-none ml-auto"  data-toggle="collapse" data-target="#navbarSupportedContent"
+        <span class="d-inline-block d-lg-none ml-auto" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars" style="color:#fbfbfb"></i>
         </span>
@@ -81,10 +64,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#"routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+              <a class="nav-link" href="#" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"routerLink="/dashboard2" routerLinkActive="active">Dashboard2</a>
+              <a class="nav-link" href="#" routerLink="/dashboard2" routerLinkActive="active">Dashboard2</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Page</a>
