--- a/src/app/page/baiwa/datatable/datatable.component.html
+++ b/src/app/page/baiwa/datatable/datatable.component.html
@@ -6,7 +6,7 @@
           <th rowspan="2">ID</th>
           <th colspan="2">name</th>
           <th colspan="2">Address</th>
-          <th rowspan="2" style="border-left: 2px solid; border-color: #f2f2f2;">age</th>
+          <th rowspan="2" style="border-left: 2px solid; border-color: #f2f2f2;">age</th>       
         </tr>
 
         <tr>
@@ -17,7 +17,7 @@
           <th>2</th>
         </tr>
       </thead>
-      <tbody>
+      <!-- <tbody>
         <tr *ngFor="let item of datas">
           <td>{{item.data1}}</td>
           <td>{{item.data2}}</td>
@@ -26,7 +26,7 @@
           <td>{{item.data5}}</td>
           <td>{{item.data6}}</td>
         </tr>
-      </tbody>
+      </tbody> -->
     </table>
     <h3>Use</h3>
     <hr>
