--- a/src/app/common/layout/layout.component.css
+++ b/src/app/common/layout/layout.component.css
@@ -83,7 +83,7 @@ a, a:hover, a:focus {
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+    border-bottom: 1px solid #3a7973;
 }
 
 #sidebar ul p {
