--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -2,7 +2,8 @@
   <!-- Sidebar  -->
   <nav id="sidebar" class="shadow">
     <div class="sidebar-header">
-      <h3>Bootstrap</h3>
+      <!-- <h3>Bootstrap</h3> -->
+      <img class="logo" src="http://baiwa.co.th/uploads/setting/baiwalogo.png" alt="logo" style="margin-left: 44px;width: 109px;">
     </div>
 
     <ul class="list-unstyled components">
@@ -36,6 +37,17 @@
           <li>
             <a href="#" routerLink="/components/datatable" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
               Datatable</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <a href="#page" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+          <i class="fa fa-folder"></i> Page
+        </a>
+        <ul class="collapse list-unstyled" id="page">
+          <li>
+            <a href="#" routerLink="/components/login" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+              Login</a>
           </li>
         </ul>
       </li>
@@ -73,7 +85,7 @@
               <a class="nav-link" href="#">Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in</a>
+              <a class="nav-link" href="#"  routerLink="/components/login" routerLinkActive="active"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in</a>
             </li>
           </ul>
         </div>
