--- a/src/app/page/dashboard2/dashboard2.component.html
+++ b/src/app/page/dashboard2/dashboard2.component.html
@@ -15,7 +15,7 @@
     <h1>Business Name or Tagline</h1>
     <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes
       a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-    <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+    <a class="btn btn-info btn-lg" href="#">Call to Action!</a>
   </div>
   <!-- /.col-md-4 -->
 </div>
@@ -39,7 +39,7 @@
           maxime minus quam molestias corporis quod, ea minima accusamus.</p>
       </div>
       <div class="card-footer">
-        <a href="#" class="btn btn-primary">More Info</a>
+        <a href="#" class="btn btn-info">More Info</a>
       </div>
     </div>
   </div>
@@ -52,7 +52,7 @@
           enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
       </div>
       <div class="card-footer">
-        <a href="#" class="btn btn-primary">More Info</a>
+        <a href="#" class="btn btn-info">More Info</a>
       </div>
     </div>
   </div>
@@ -65,7 +65,7 @@
           maxime minus quam molestias corporis quod, ea minima accusamus.</p>
       </div>
       <div class="card-footer">
-        <a href="#" class="btn btn-primary">More Info</a>
+        <a href="#" class="btn btn-info">More Info</a>
       </div>
     </div>
   </div>
