--- a/src/app/components/card/card-header/card-header.component.html
+++ b/src/app/components/card/card-header/card-header.component.html
@@ -1,5 +1,5 @@
-<div class="card shadow">
-  <div class="card-header">
+<div class="card shadow ">
+  <div class="card-header color-app">
     <b class="font-h">{{header}}</b>
   </div>
   <div class="card-body">
