--- a/src/app/page/baiwa/button/button.component.html
+++ b/src/app/page/baiwa/button/button.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <app-card-header header="Buttons">
+  <app-card header="Buttons">
     <div class="row">
       <div class="col-sm-6">
         <div class="form-group">
@@ -24,5 +24,5 @@
       </pre>
       </div>
     </div>
-  </app-card-header>
+  </app-card>
 </div>
