--- a/src/app/page/baiwa/cards/cards.component.html
+++ b/src/app/page/baiwa/cards/cards.component.html
@@ -1,9 +1,9 @@
 <div class="form-group">
     <div class="row">
         <div class="col-sm-6">
-            <app-card-header header="Title">
+            <app-card header="Title">
                 <p>content</p>
-            </app-card-header>
+            </app-card>
         </div>
         <div class="col-sm-6">
             <pre>{{cardHeader}}</pre>
@@ -13,9 +13,9 @@
 <div class="form-group">
     <div class="row">
         <div class="col-sm-6">
-            <app-card-body>
+            <app-card>
                 <p>content</p>
-            </app-card-body>
+            </app-card>
         </div>
         <div class="col-sm-6">
             <pre>{{cardBody}}</pre>
