--- a/src/app/page/baiwa/datatable/datatable.component.html
+++ b/src/app/page/baiwa/datatable/datatable.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <app-card-header header="Datatable">
+  <app-card header="Datatable">
     <table datatable [dtOptions]="dtOptions" class="table table-bordered table-striped table-sm" style="width:100%">
       <thead class="text-center">
         <tr>
@@ -44,5 +44,5 @@
         </pre>
       </div>
     </div>
-  </app-card-header>
+  </app-card>
 </div>
