--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -7,26 +7,26 @@
 
 <div class="form-group row">
   <div class="col-sm-6">
-    <app-card-body>
+    <app-card>
       <canvas id="line-chart"></canvas>
-    </app-card-body>
+    </app-card>
   </div>
   <div class="col-sm-6">
-    <app-card-body>
+    <app-card>
       <canvas id="radar-chart"></canvas>
-    </app-card-body>
+    </app-card>
   </div>
 </div>
 <div class="form-group row">
   <div class="col-sm-6">
-    <app-card-body>
+    <app-card>
       <canvas id="barChart"></canvas>
-    </app-card-body>
+    </app-card>
   </div>
   <div class="col-sm-6">
-    <app-card-body>
+    <app-card>
       <canvas id="polarAear"></canvas>
-    </app-card-body>
+    </app-card>
   </div>
 </div>
 
