--- a/src/app/page/baiwa/blockui/blockui.component.html
+++ b/src/app/page/baiwa/blockui/blockui.component.html
@@ -1,4 +1,4 @@
-<app-card-header header="Block Ui">
+<app-card header="Block Ui">
   <div class="row">
     <div class="col-sm-6">
         <button type="button" class="btn btn-sm btn-info" (click)="blockUi()">BlockUi</button>
@@ -8,4 +8,4 @@
     </div>
   </div>
     
-</app-card-header>
+</app-card>
