--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -38,6 +38,10 @@
             <a href="#" routerLink="/components/datatable" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
               Datatable</a>
           </li>
+          <li>
+            <a href="#" routerLink="/components/breadcrumb" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+              Breadcrumb</a>
+          </li>
         </ul>
       </li>
       <li>
