--- a/src/app/page/baiwa/button/button.component.html
+++ b/src/app/page/baiwa/button/button.component.html
@@ -15,8 +15,10 @@
           <button-save></button-save>
           <button-select></button-select>
         </div>
-
-
+        <br>
+        <br>
+        <br>
+        <button-custom color="warning">Custom!!</button-custom>
       </div>
       <div class="col-sm-6">
         <pre>
