--- a/src/app/page/baiwa/breadcrumb/breadcrumb.component.html
+++ b/src/app/page/baiwa/breadcrumb/breadcrumb.component.html
@@ -1,1 +1,13 @@
-<app-breadcrumb></app-breadcrumb>
+<app-card header="Breadcrumb">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="form-group">
+                <app-breadcrumb></app-breadcrumb>
+            </div>
+            <div class="form-group">
+                <h1>Using</h1>
+                <pre>{{breadcrumb}}</pre>
+            </div>
+        </div>
+    </div>
+</app-card>
