--- a/src/app/page/baiwa/button/button.component.html
+++ b/src/app/page/baiwa/button/button.component.html
@@ -14,6 +14,7 @@
           <button-print></button-print>
           <button-save></button-save>
           <button-select></button-select>
+          <button-confirm></button-confirm>
         </div>
         <br>
         <br>
