--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -42,6 +42,10 @@
             <a href="#" routerLink="/components/breadcrumb" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
               Breadcrumb</a>
           </li>
+          <li>
+            <a href="#" routerLink="/components/datepicker" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+              Datepicker</a>
+          </li>
         </ul>
       </li>
       <li>
