--- a/src/app/components/buttons/button-custom/button-custom.component.html
+++ b/src/app/components/buttons/button-custom/button-custom.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-{{color}} btn-sm"><ng-content></ng-content></button>
+<button type="{{btnType}}" class="btn btn-{{color}} btn-sm"><ng-content></ng-content></button>
