--- a/src/app/components/buttons/button-save/button-save.component.html
+++ b/src/app/components/buttons/button-save/button-save.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-info btn-sm"><i class="fa fa-save" aria-hidden="true"></i> Save</button>
+<button type="{{btnType}}" class="btn btn-info btn-sm"><i class="fa fa-save" aria-hidden="true"></i> Save</button>
