--- a/src/app/components/buttons/button-cancel/button-cancel.component.html
+++ b/src/app/components/buttons/button-cancel/button-cancel.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-secondary btn-sm"><i class="fa fa-times" aria-hidden="true"></i> Cancel</button>
+<button type="{{btnType}}"class="btn btn-secondary btn-sm"><i class="fa fa-times" aria-hidden="true"></i> Cancel</button>
