--- a/src/app/page/baiwa/page/login/login.component.html
+++ b/src/app/page/baiwa/page/login/login.component.html
@@ -13,7 +13,7 @@
           <input id="pass" type="password" class="input" data-type="password">
         </div>
         <div class="group">
-          <input type="submit" class="button" value="Sign In">
+          <button type="button" class="button">Sign In</button>
         </div>
         <div class="hr"></div>
       </div>
