--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,16 @@
     border-radius: .2rem;
 }
 
+/* margin all button */
 .btn {
     margin-left: 2px;
     margin-right: 2px;
+}
+
+/* DatePiker Color */
+.theme-green .bs-datepicker-head {
+    background-color: #34a79d !important;
+}
+.theme-green .bs-datepicker-body table td span.selected, .theme-green .bs-datepicker-body table td.selected span, .theme-green .bs-datepicker-body table td span[class*="select-"]:after, .theme-green .bs-datepicker-body table td[class*="select-"] span:after {
+    background-color: #34a79d;
 }
