--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -50,6 +50,10 @@
             <a href="#" routerLink="/components/alert" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
               Alert</a>
           </li>
+          <li>
+            <a href="#" routerLink="/components/modal" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+              Modal</a>
+          </li>
         </ul>
       </li>
       <li>
