--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -62,7 +62,7 @@
         </a>
         <ul class="collapse list-unstyled" id="page">
           <li>
-            <a href="#" routerLink="/components/login" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+            <a href="#" routerLink="/login" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
               Login</a>
           </li>
         </ul>
@@ -101,7 +101,7 @@
               <a class="nav-link" href="#">Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" routerLink="/components/login" routerLinkActive="active"><i class="fa fa-sign-in"
+              <a class="nav-link" href="#" routerLink="/login" routerLinkActive="active"><i class="fa fa-sign-in"
                   aria-hidden="true"></i> Sign in</a>
             </li>
           </ul>
