--- a/src/app/page/baiwa/page/login/login.component.css
+++ b/src/app/page/baiwa/page/login/login.component.css
@@ -13,6 +13,7 @@ a{color:inherit;text-decoration:none}
 
 .login-wrap{
 	width: 100%;
+	margin-top: 8% !important;
 	margin:auto;
 	max-width:510px;
 	min-height:510px;
