--- a/src/app/page/baiwa/page/login/login.component.html
+++ b/src/app/page/baiwa/page/login/login.component.html
@@ -10,10 +10,10 @@
         </div>
         <div class="group">
           <label for="pass" class="label">Password</label>
-          <input id="pass" type="password" class="input" data-type="password">
+          <input id="pass" type="password" class="input">
         </div>
         <div class="group">
-          <button type="button" class="button">Sign In</button>
+          <button type="button" routerLink="/dashboard"  class="button">Sign In</button>
         </div>
         <div class="hr"></div>
       </div>
@@ -23,7 +23,7 @@
           <input id="user" type="text" class="input">
         </div>
         <div class="group">
-          <input type="submit" class="button" value="Reset Password">
+          <input type="button" routerLink="/dashboard" class="button" value="Reset Password">
         </div>
         <div class="hr"></div>
       </div>
