--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -114,7 +114,7 @@
       <!-- alert success -->
       <div class="alert alert-success alert-dismissible fade show" style="display: none" id="alert-success">
         <a class="close" onclick="$('#alert-success').hide()">×</a>
-        <strong>Warning!</strong> Best check yo self, you're not looking too good.
+        <strong>Success</strong> Best check yo self, you're not looking too good.
       </div>
       <!-- alert danger -->
       <div class="alert alert-danger alert-dismissible fade show" style="display: none" id="alert-danger">
