--- a/src/app/page/baiwa/alert/alert.component.html
+++ b/src/app/page/baiwa/alert/alert.component.html
@@ -13,7 +13,7 @@
       <!-- alert success -->
       <div class="alert alert-success alert-dismissible fade show" id="alert-success">
         <a class="close">×</a>
-        <strong>Warning!</strong> Best check yo self, you're not looking too good.
+        <strong>Success!</strong> Best check yo self, you're not looking too good.
       </div>
       <!-- alert danger -->
       <div class="alert alert-danger alert-dismissible fade show" id="alert-danger">
