--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -71,7 +71,7 @@
 
     <ul class="list-unstyled CTAs">
       <li>
-        <a href="#" class="download">Download source</a>
+        <a href="https://github.com/teerawutkt3/template" class="download">Download source</a>
       </li>
       <li>
         <a href="#" class="article">Back to article</a>
