--- a/src/app/common/layout/layout.component.html
+++ b/src/app/common/layout/layout.component.html
@@ -54,6 +54,10 @@
             <a href="#" routerLink="/components/modal" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
               Modal</a>
           </li>
+          <li>
+            <a href="#" routerLink="/components/select2" routerLinkActive="active"><i class="fa fa-circle-thin"></i>
+              Select2</a>
+          </li>
         </ul>
       </li>
       <li>
